# MAX78000-hal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  rust_build_and_test.yml  spell_check.yml
config/: lingo.dic  spellcheck.toml
hal-macros/: Cargo.toml
hal-macros-derive/: Cargo.toml
hal-macros-derive/src/: lib.rs
hal-macros/src/: lib.rs
src/: bits.rs  debug.rs  error.rs  lib.rs  memory_map.rs  registers.rs  tests.rs
src/aes/: mod.rs  registers.rs
src/gcr/: mod.rs  registers.rs
src/gpio/: hardware.rs  mod.rs  ownership.rs  registers.rs
src/i2c/: mod.rs  registers.rs
src/timer/: registers.rs
src/trng/: mod.rs  registers.rs
src/uart/: mod.rs  registers.rs  uart.rs
